施設登録、予約機能

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,7 +33,7 @@
               </li>
 
               <li class="DropdownMenu__item DropdownMenu__item--middle">
-                <a href="/rooms/own">登録済み一覧</a>
+                <%= link_to '登録済み一覧', rooms_path %>
               </li>
 
               <li class="DropdownMenu__item">
