--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,30 +1,32 @@
-<h1>予約済み一覧</h1>
-
-<table>
-  <thead>
-    <tr>
-      <%# <th>施設画像</th> %>
-      <th>施設名</th>
-      <th>紹介文</th>
-      <th>合計料金</th>
-      <th>チェックイン日</th>
-      <th>チェックアウト日</th>
-      <th>予約確定日時</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @reservations.each do |reservation| %>
+<div class="container my-5">
+  <h1 class="mb-4">予約済み一覧</h1>
+  
+  <table class="table table-striped table-hover">
+    <thead class="table-dark">
       <tr>
-        <%# <td><%= image_tag reservation.room.image_url if reservation.room.image? %>
-        <td><%= reservation.room.name %></td>
-        <td><%= reservation.room.detail %></td>
-        <td><%= number_to_currency(reservation.room.price) %></td>
-        <td><%= reservation.checkin.strftime("%Y/%m/%d") %></td>
-        <td><%= reservation.checkout.strftime("%Y/%m/%d") %></td>
-        <td><%= reservation.created_at.strftime("%Y/%m/%d %H:%M") %></td>
+        <th scope="col">施設画像</th>
+        <th scope="col">施設名</th>
+        <th scope="col">紹介文</th>
+        <th scope="col">合計料金</th>
+        <th scope="col">チェックイン日</th>
+        <th scope="col">チェックアウト日</th>
+        <th scope="col">予約確定日時</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%= link_to '施設一覧に戻る', rooms_path %>
+    </thead>
+    <tbody>
+      <% @reservations.each do |reservation| %>
+        <tr>
+          <td>
+            <%= image_tag(reservation.room.icon_or_default, class: "img-fluid rounded", style: "max-width: 150px; height: auto;") %>
+          </td>
+          <td><strong><%= reservation.room.name %></strong></td>
+          <td><%= truncate(reservation.room.detail, length: 50) %></td>
+          <td><%= number_to_currency(reservation.total_price, unit: "¥", strip_insignificant_zeros: true) %></td>
+          <td><%= reservation.checkin.strftime("%Y/%m/%d") %></td>
+          <td><%= reservation.checkout.strftime("%Y/%m/%d") %></td>
+          <td><%= reservation.created_at.strftime("%Y/%m/%d %H:%M") %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
