--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,41 +1,45 @@
-<%= form_with model: @room, local: true do |f| %>
-  <% if @room.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@room.errors.count, "error") %> prohibited this room from being saved:</h2>
-      <ul>
-        <% @room.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+<div class="container my-5">
+  <h1 class="mb-4">施設情報編集</h1>
+  <%= form_with model: @room, local: true, class: "needs-validation" do |f| %>
+    <% if @room.errors.any? %>
+      <div class="alert alert-danger">
+        <h4 class="alert-heading"><%= pluralize(@room.errors.count, "error") %> prevented this room from being saved:</h4>
+        <ul>
+          <% @room.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="mb-3">
+      <%= f.label :name, '施設名', class: "form-label" %>
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
+
+    <div class="mb-3">
+      <%= f.label :detail, '詳細', class: "form-label" %>
+      <%= f.text_area :detail, class: "form-control" %>
+    </div>
+
+    <div class="mb-3">
+      <%= f.label :price, '価格 (/日)', class: "form-label" %>
+      <%= f.number_field :price, class: "form-control" %>
+    </div>
+
+    <div class="mb-3">
+      <%= f.label :address, '住所', class: "form-label" %>
+      <%= f.text_field :address, class: "form-control" %>
+    </div>
+
+    <div class="mb-3">
+      <%= f.label :icon, '画像', class: "form-label" %>
+      <%= f.file_field :icon, class: "form-control" %>
+    </div>
+
+    <div class="d-flex gap-3">
+      <%= f.submit '更新する', class: "btn btn-primary" %>
+      <%= link_to 'キャンセル', rooms_path, class: "btn btn-outline-secondary" %>
     </div>
   <% end %>
-
-  <div>
-    <%= f.label :name, '施設名' %>
-    <%= f.text_field :name %>
-  </div>
-
-  <div>
-    <%= f.label :detail, '詳細' %>
-    <%= f.text_area :detail %>
-  </div>
-
-  <div>
-    <%= f.label :price, '価格 (/日)' %>
-    <%= f.number_field :price %>
-  </div>
-
-  <div>
-    <%= f.label :address, '住所' %>
-    <%= f.text_field :address %>
-  </div>
-
-  <div>
-    <%= f.label :icon, '画像' %>
-    <%= f.file_field :icon %>
-  </div>
-
-  <div>
-    <%= f.submit '更新する' %>
-  </div>
-<% end %>
+</div>
