--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,19 +1,34 @@
-<h1>登録済み一覧</h1>
-<%= link_to '新規施設作成', new_room_path %>
-<% if @rooms.any? %>
-  <ul>
-    <% @rooms.each do |room| %>
-      <li>
-        <strong><%= link_to room.name, room_path(room) %></strong><br />
-        <%= image_tag room.image_url if room.icon? %><br />
-        <%= room.detail %><br />
-        宿泊料金：<%= number_to_currency(room.price) %><br />
-        住所：<%= room.address %><br />
-        <%= link_to '施設編集', edit_room_path(room) %> |
-        <%= link_to '施設削除', room_path(room), method: :delete, data: { confirm: '施設を削除しますか？' } %>
-      </li>
-    <% end %>
-  </ul>
-<% else %>
-  <p>まだ施設が登録されていません。</p>
-<% end %>
+<div class="container my-5">
+  <h1 class="mb-4">登録済み一覧</h1>
+  <div class="mb-3">
+    <%= link_to '新規施設作成', new_room_path, class: "btn btn-primary" %>
+  </div>
+
+  <% if @rooms.any? %>
+    <div class="row">
+      <% @rooms.each do |room| %>
+        <div class="col-md-6 mb-4">
+          <div class="card">
+            <%= image_tag(room.icon_or_default, class: "img-fluid rounded", style: "max-width: 150px; height: auto;") %>
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to room.name, room_path(room) %></h5>
+              <p class="card-text">
+                <strong>施設詳細：</strong><%= truncate(room.detail, length: 50) %><br>
+                <strong>宿泊料金：</strong><%= number_to_currency(room.price, unit: "¥", strip_insignificant_zeros: true) %><br>
+                <strong>住所：</strong><%= room.address %>
+              </p>
+              <div class="d-flex justify-content-between">
+                <%= link_to '施設編集', edit_room_path(room), class: "btn btn-outline-secondary btn-sm" %>
+                <%= link_to '施設削除', room_path(room), method: :delete, data: { confirm: '施設を削除しますか？' }, class: "btn btn-danger btn-sm" %>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  <% else %>
+    <div class="alert alert-info">
+      まだ施設が登録されていません。
+    </div>
+  <% end %>
+</div>
