--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,7 @@
       <h2 class="text-center mb-4">アカウント新規登録</h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: @user %>
         <div class="mb-3">
         <%= f.label :name, '名前' %><br />
         <%= f.text_field :name, autofocus: true, class: "form-control" %>
