--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -4,7 +4,6 @@
   <%= form_with model: @room, local: true, class: "needs-validation" do |f| %>
     <% if @room.errors.any? %>
       <div class="alert alert-danger">
-        <h2><%= pluralize(@room.errors.count, "error") %>が見つかりました:</h2>
         <ul>
           <% @room.errors.full_messages.each do |message| %>
             <li><%= message %></li>
@@ -44,6 +43,6 @@
   <% end %>
 
   <div class="mt-3">
-    <%= link_to '施設一覧に戻る', rooms_path, class: "btn btn-outline-secondary" %>
+    <%= link_to '登録済み施設一覧に戻る', rooms_path, class: "btn btn-outline-secondary" %>
   </div>
 </div>
